implement Lastfm artist binding logic