@@ -1,75 +1,183 @@
 package yurykorzun.art.universe.music.data.approved.controller;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import yurykorzun.art.universe.common.controller.ResponseWrapper;
+import yurykorzun.art.universe.music.data.approved.dto.ArtistBindingRequestDTO;
 import yurykorzun.art.universe.music.data.approved.dto.BoundEntityProjection;
 import yurykorzun.art.universe.music.data.approved.dto.TestBoundEntityProjectionImpl;
 import yurykorzun.art.universe.music.data.approved.entity.DataSource;
 import yurykorzun.art.universe.music.data.approved.service.ArtistService;
-import java.util.Arrays;
+
 import java.util.List;
+
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-public class ArtistControllerTest {
-
-    @InjectMocks
-    private ArtistController artistController;
+class ArtistControllerTest {
 
     @Mock
     private ArtistService artistService;
 
-    private List<BoundEntityProjection> mockBoundArtists;
-
-    @BeforeEach
-    void setUp() {
-        mockBoundArtists = Arrays.asList(
-            new TestBoundEntityProjectionImpl(123L, DataSource.LASTFM, 321L, "artist1"),
-            new TestBoundEntityProjectionImpl(456L, DataSource.SPOTIFY, 654L, "artist2")
-        );
-    }
+    @InjectMocks
+    private ArtistController artistController;
 
     @Test
-    void whenFindBoundArtists_shouldReturnSuccessResponse() {
+    void findBoundArtists_shouldReturnSuccessResponse() throws Exception {
         // Given
-        DataSource dataSource = DataSource.SPOTIFY;
-        List<Long> externalIds = Arrays.asList(123L, 456L);
+        DataSource dataSource = DataSource.LASTFM;
+        List<Long> externalIds = List.of(1L, 2L);
         
+        TestBoundEntityProjectionImpl projection = new TestBoundEntityProjectionImpl(
+            1L, dataSource, 101L, "Test Artist"
+        );
+
+        List<BoundEntityProjection> expectedBindings = List.of(projection);
         when(artistService.findBoundArtists(dataSource, externalIds))
-            .thenReturn(mockBoundArtists);
+            .thenReturn(expectedBindings);
+        ResponseEntity<ResponseWrapper<List<BoundEntityProjection>>> expectedResponse =
+            ResponseWrapper.success(expectedBindings);
 
         // When
-        ResponseEntity<ResponseWrapper<List<BoundEntityProjection>>> response = 
+        ResponseEntity<ResponseWrapper<List<BoundEntityProjection>>> actualResponse =
             artistController.findBoundArtists(dataSource, externalIds);
 
         // Then
-        assertTrue(response.getStatusCode().is2xxSuccessful());
-        assertEquals(mockBoundArtists, response.getBody().getData());
-    }
+        assertEquals(HttpStatus.OK, actualResponse.getStatusCode());
+        assertEquals(expectedResponse, actualResponse);
 
+        verify(artistService).findBoundArtists(dataSource, externalIds);
+    }
+    
     @Test
-    void whenFindBoundArtists_withException_shouldReturnFailureResponse() {
+    void findBoundArtists_whenExceptionThrown_shouldReturnFailureResponse() throws Exception {
         // Given
-        DataSource dataSource = DataSource.SPOTIFY;
-        List<Long> externalIds = Arrays.asList(123L, 456L);
-        String errorMessage = "Service error occurred";
+        DataSource dataSource = DataSource.LASTFM;
+        List<Long> externalIds = List.of(1L, 2L);
+        String errorMessage = "Test error";
         
         when(artistService.findBoundArtists(dataSource, externalIds))
             .thenThrow(new RuntimeException(errorMessage));
+        ResponseEntity<ResponseWrapper<List<BoundEntityProjection>>> expectedResponse =
+            ResponseWrapper.failure(String.format("Failed to get bound artists: %s", errorMessage));
 
         // When
-        ResponseEntity<ResponseWrapper<List<BoundEntityProjection>>> response = 
+        ResponseEntity<ResponseWrapper<List<BoundEntityProjection>>> actualResponse =
             artistController.findBoundArtists(dataSource, externalIds);
 
         // Then
-        assertFalse(response.getStatusCode().is2xxSuccessful());
-        assertTrue(response.getBody().getMessage().contains(errorMessage));
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, actualResponse.getStatusCode());
+        assertEquals(expectedResponse, actualResponse);
+
+        verify(artistService).findBoundArtists(dataSource, externalIds);
+    }
+    
+    @Test
+    void bindArtist_shouldReturnSuccessResponse() throws Exception {
+        // Given
+        DataSource dataSource = DataSource.LASTFM;
+        Long externalId = 1L;
+        String artistName = "Test Artist";
+        
+        ArtistBindingRequestDTO request = ArtistBindingRequestDTO.builder()
+            .name(artistName)
+            .build();
+        
+        TestBoundEntityProjectionImpl projection = new TestBoundEntityProjectionImpl(
+            externalId, dataSource, 101L, artistName
+        );
+        ResponseEntity<ResponseWrapper<BoundEntityProjection>> expectedResponse = ResponseWrapper.success(projection);
+        
+        when(artistService.bindArtist(eq(dataSource), eq(externalId), any(ArtistBindingRequestDTO.class)))
+            .thenReturn(projection);
+
+        // When
+        ResponseEntity<ResponseWrapper<BoundEntityProjection>> actualResponse =
+            artistController.bindArtist(dataSource, externalId, request);
+
+        // Then
+        assertEquals(HttpStatus.OK, actualResponse.getStatusCode());
+        assertEquals(expectedResponse, actualResponse);
+        
+        verify(artistService).bindArtist(eq(dataSource), eq(externalId), any(ArtistBindingRequestDTO.class));
+    }
+    
+    @Test
+    void bindArtist_whenExceptionThrown_shouldReturnFailureResponse() throws Exception {
+        // Given
+        DataSource dataSource = DataSource.LASTFM;
+        Long externalId = 1L;
+        String artistName = "Test Artist";
+        String errorMessage = "Test error";
+        
+        ArtistBindingRequestDTO request = ArtistBindingRequestDTO.builder()
+            .name(artistName)
+            .build();
+        ResponseEntity<ResponseWrapper<BoundEntityProjection>> expectedResponse =
+            ResponseWrapper.failure(String.format("Failed to bind artist: %s", errorMessage));
+        
+        when(artistService.bindArtist(eq(dataSource), eq(externalId), any(ArtistBindingRequestDTO.class)))
+            .thenThrow(new RuntimeException(errorMessage));
+
+        // When
+        ResponseEntity<ResponseWrapper<BoundEntityProjection>> actualResponse =
+            artistController.bindArtist(dataSource, externalId, request);
+
+        // Then
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, actualResponse.getStatusCode());
+        assertEquals(expectedResponse, actualResponse);
+        
+        verify(artistService).bindArtist(eq(dataSource), eq(externalId), any(ArtistBindingRequestDTO.class));
+    }
+    
+    @Test
+    void unbindArtist_shouldReturnSuccessResponse() throws Exception {
+        // Given
+        DataSource dataSource = DataSource.LASTFM;
+        Long externalId = 1L;
+        
+        when(artistService.unbindArtist(dataSource, externalId)).thenReturn(true);
+        ResponseEntity<ResponseWrapper<Boolean>> expectedResponse = ResponseWrapper.success(true);
+
+            // When
+        ResponseEntity<ResponseWrapper<Boolean>> actualResponse =
+            artistController.unbindArtist(dataSource, externalId);
+
+        // Then
+        assertEquals(HttpStatus.OK, actualResponse.getStatusCode());
+        assertEquals(expectedResponse, actualResponse);
+        
+        verify(artistService).unbindArtist(dataSource, externalId);
+    }
+    
+    @Test
+    void unbindArtist_whenExceptionThrown_shouldReturnFailureResponse() throws Exception {
+        // Given
+        DataSource dataSource = DataSource.LASTFM;
+        Long externalId = 1L;
+        String errorMessage = "Test error";
+
+        when(artistService.unbindArtist(dataSource, externalId))
+            .thenThrow(new RuntimeException(errorMessage));
+        ResponseEntity<ResponseWrapper<Boolean>> expectedResponse =
+            ResponseWrapper.failure(String.format("Failed to unbind artist: %s", errorMessage));
+
+        // When
+        ResponseEntity<ResponseWrapper<Boolean>> actualResponse =
+            artistController.unbindArtist(dataSource, externalId);
+
+        // Then
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, actualResponse.getStatusCode());
+        assertEquals(expectedResponse, actualResponse);
+        
+        verify(artistService).unbindArtist(dataSource, externalId);
     }
 }
